edit database
